# go1_robot

install/: local_setup.sh  setup.sh
install/go1_description/share/go1_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go1_description/share/go1_description/cmake/: go1_descriptionConfig-version.cmake  go1_descriptionConfig.cmake
install/go1_description/share/go1_description/config/: go1.rviz
install/go1_description/share/go1_description/environment/: ament_prefix_path.dsv  path.dsv
install/go1_description/share/go1_description/launch/: gazebo_with_gui.launch.py  launch_sim.launch.py  load_go1.launch.py
install/go1_description/share/go1_description/meshes/: calf.dae  depthCamera.dae  hip.dae  thigh.dae  thigh_mirror.dae  ultraSound.dae
install/go1_description/share/go1_description/urdf/: robot.urdf
install/go1_description/share/go1_description/xacro/: const.xacro  depthCamera.xacro  gazebo.xacro  leg.xacro  materials.xacro  robot.urdf  robot.urdf.xacro  robot.xacro  transmission.xacro  ultraSound.xacro
install/ros2_unitree_legged_msgs/share/ros2_unitree_legged_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/unitree_inspection/share/unitree_inspection/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/unitree_inspection/unitree_ocr_interfaces/: package.xml
src/unitree_ros2/go1_description/: CMakeLists.txt
(+539 files in other folders)
