<?xml version="1.0"?>
<package format="3">
    <name>go1_description</name>
    <version>0.0.0</version>
    <description>The go1_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>ament_cmake</build_depend>
    <build_depend>xacro</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>rviz2</build_depend>
    <build_depend>robot_state_publisher</build_depend>

    <exec_depend>ament_cmake</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
